--- a/reactive-programming-using-reactor/build.gradle
+++ b/reactive-programming-using-reactor/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id "io.freefair.lombok" version "5.3.0"
+    id "io.freefair.lombok" version "8.11"
 
 }
 
@@ -15,7 +15,7 @@ dependencies {
     implementation("io.projectreactor:reactor-core:3.4.0")
 
     //log - logback
-    implementation("ch.qos.logback:logback-classic:1.2.3")
+    implementation('ch.qos.logback:logback-classic:1.4.12')
 
     //reactor-debug-agent
     implementation('io.projectreactor:reactor-tools:3.4.0')
