--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,14 @@
 services:
+  movies-service:
+    profiles:
+      - "apps"
+    build:
+      context: ./movies-service
+    environment:
+      JAVA_TOOL_OPTIONS: "-agentlib:jdwp=transport=dt_socket,address=*:5005,server=y,suspend=n"
+    ports:
+      - "8082:8082"
+      - "5005:5005"
   mongodb:
     image: mongo:latest
     container_name: "mongodb"
