--- a/movies-service/Dockerfile
+++ b/movies-service/Dockerfile
@@ -1,11 +1,16 @@
-FROM eclipse-temurin:21-alpine AS build
+FROM eclipse-temurin:21-alpine AS base
+
+FROM base AS dev
+
+
+FROM base AS build
 
 WORKDIR /app
 
 COPY . .
 RUN ./gradlew assemble
 
-FROM eclipse-temurin:21-alpine
+FROM base
 
 COPY --from=build /app/build/libs/movies-service-0.0.1-SNAPSHOT.jar /app.jar
 
