--- a/movies-service/Dockerfile
+++ b/movies-service/Dockerfile
@@ -1,17 +1,30 @@
-FROM eclipse-temurin:21-alpine AS base
+FROM eclipse-temurin:21-alpine AS base-build
 
-FROM base AS dev
+FROM eclipse-temurin:21-jre-alpine AS base-run
 
-
-FROM base AS build
+FROM base-build AS build
 
 WORKDIR /app
 
-COPY . .
+COPY settings.gradle build.gradle gradlew ./
+COPY gradle/ ./gradle
+RUN ./gradlew --version # cache distribution
+COPY src/ ./src
 RUN ./gradlew assemble
 
-FROM base
+FROM base-run
 
 COPY --from=build /app/build/libs/movies-service-0.0.1-SNAPSHOT.jar /app.jar
+
+ARG UID=10101
+RUN adduser \
+    --disabled-password \
+    --gecos "" \
+    --home "/nonexistent" \
+    --shell "/sbin/nologin" \
+    --no-create-home \
+    --uid "${UID}" \
+    appuser
+USER appuser
 
 ENTRYPOINT ["java","-jar","/app.jar"]
