--- a/movies-service/build.gradle
+++ b/movies-service/build.gradle
@@ -25,6 +25,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
+
+	// wiremock
+	testImplementation'org.springframework.cloud:spring-cloud-starter-contract-stub-runner:4.2.0'
 }
 
 test {
